Scroll on click menu items

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="bg-purple">
     <div class="container">
       <nav class="menu navbar navbar-expand-md navbar-purple d-flex justify-content-center">
-        <a class="navbar-brand" href="#" id="a-logo">
+        <a class="navbar-brand" href="#home" id="a-logo">
           <div class="logo-white d-inline-block align-top"></div>
           Get Gift
         </a>  
@@ -20,10 +20,10 @@
         <div class="collapse navbar-collapse d-flex justify-content-center justify-content-md-end justify-content-xl-end" id="navbarSupportedContent">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">The Extension<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#the-extension-section">The Extension</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">The Developer</a>
+              <a class="nav-link" href="#the-developer-section">The Developer</a>
             </li>
           </ul>
         </div>
@@ -32,7 +32,7 @@
     </div>
   </div>
 
-  <section class="container">
+  <section class="container" id="the-extension-section">
     <div class="d-flex flex-column-reverse flex-md-row banner">
       <div class="skewed"></div>
       <div class="justify-content-start">
@@ -123,6 +123,7 @@
   <footer class="d-flex justify-content-center">
     <p>&copy; Copyright 2020 - All rights reserved - Developed by RBalconi</p>
   </footer>
+  <script src="scripts/scrips.js"></script>
   <script src="https://kit.fontawesome.com/bb7f391ef5.js" crossorigin="anonymous"></script>
   </body>
 </html>
