--- a/index.html
+++ b/index.html
@@ -9,21 +9,29 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="bg-purple">
+  <div class="bg-purple position-fixed d-flex flex-column" id="div-menu">
     <div class="container">
       <nav class="menu navbar navbar-expand-md navbar-purple d-flex justify-content-center">
-        <a class="navbar-brand" href="#home" id="a-logo">
-          <div class="logo-white d-inline-block align-top"></div>
+        <a class="navbar-brand " href="#the-banner-section" id="a-logo">
+          <div class="logo-white d-inline-block align-top "></div>
           Get Gift
         </a>  
-
         <div class="collapse navbar-collapse d-flex justify-content-center justify-content-md-end justify-content-xl-end" id="navbarSupportedContent">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#the-extension-section">The Extension</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item d-flex justify-content-center">
               <a class="nav-link" href="#the-developer-section">The Developer</a>
+            </li>
+            <li class="nav-item d-flex justify-content-center">
+              <form class="d-flex align-items-center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input class="btn" type="hidden" name="cmd" value="_s-xclick" />
+                <input class="btn" type="hidden" name="hosted_button_id" value="MTDCBFDPJXZQN" />
+                <!-- <input class="btn" type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" /> -->
+                <input class="btn" type="image" src="images/button.png" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img  alt="" border="0" src="https://www.paypal.com/en_BR/i/scr/pixel.gif" width="1" height="1" />
+              </form>                             
             </li>
           </ul>
         </div>
@@ -32,7 +40,7 @@
     </div>
   </div>
 
-  <section class="container" id="the-extension-section">
+  <section class="container" id="the-banner-section">
     <div class="d-flex flex-column-reverse flex-md-row banner">
       <div class="skewed"></div>
       <div class="justify-content-start">
@@ -49,7 +57,20 @@
     </div>      
   </section>
 
-  <section class="div-background-developer" id="the-developer-section">
+  <section class="section-background-full background-extension " id="the-extension-section">
+    <div class="container d-flex flex-column flex-md-row justify-content-center the-extension">
+      <div class="d-flex flex-column flex-xl-row justify-content-center">
+        <img src="images/all.png" class="d-flex  justify-content-center" id="image-extension">
+        <div class="justify-content-center">
+          <h1 class="title">The Extension</h1>
+          <p class="description desc-extension">An extension with the simple purpose of taking your channel points while you watch that live in tranquility.</p>
+          <p class="description desc-extension">Being able to check the amount of points you got just by looking at the extension work, and if you wanted to be able to enable or disable a beep to know when you received points.</p>
+        </div>
+    </div>      
+  </section>
+
+
+  <section class="section-background-full background-developer" id="the-developer-section">
     <div class="container">
       <div class="d-flex flex-column flex-md-row justify-content-center the-developer">
         <div class="d-flex justify-content-center">
@@ -117,9 +138,7 @@
       </div>      
     </div>
   </section>
-  <section>
 
-  </section>
   <footer class="d-flex justify-content-center">
     <p>&copy; Copyright 2020 - All rights reserved - Developed by RBalconi</p>
   </footer>
