--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <div class="skewed"></div>
       <div class="justify-content-start">
         <h1 class="title">Get Gift - Extension for Chrome</h1>
-        <p class="description">Tired of clicking all the time that your channel points appear while you rest and watch that relaxing live? </p>
-        <p class="description">Get Gift is an extension for Google Chrome that does just that, it detects when points are available and automatically picks up.</p>
+        <p class="description">Are you tired of clicking everytime your channel points come up while you're comfortably watching that relaxing live?</p>
+        <p class="description">Get gift is an extention for google Chrome that does just that! It detects when points are available and picks them up for you.</p>
         <div class="d-flex">
           <a class="btn btn-purple" href="#" id="btn-banner-download">Download</br><span class="subline-button">for Chrome</span></a>
         </div>
@@ -62,10 +62,11 @@
       <div class="d-flex flex-column flex-xl-row justify-content-center">
         <img src="images/all.png" class="d-flex  justify-content-center" id="image-extension">
         <div class="justify-content-center">
-          <h1 class="title">The Extension</h1>
-          <p class="description desc-extension">An extension with the simple purpose of taking your channel points while you watch that live in tranquility.</p>
-          <p class="description desc-extension">Being able to check the amount of points you got just by looking at the extension work, and if you wanted to be able to enable or disable a beep to know when you received points.</p>
+          <h1 class="title">The Extention</h1>
+          <p class="description desc-extension">An extention with the simple purpose of picking/getting  your channel points while you watch lives in tranquility.</p>
+          <p class="description desc-extension">You'll be able to check the amount of points you 've got by just taking a look at the extention work. And, if desired, you can enable a beep to notify you when you receive points.</p>
         </div>
+      </div>
     </div>      
   </section>
 
@@ -82,8 +83,8 @@
           <img src="images/eu.jpg" class="d-flex justify-content-center" id="image-developer">
         </div>
         <div class="justify-content-center">
-          <p class="description desc-developer">I have a degree in Technology in Software Development (TDS) from the Faculdade de Cuiabá (UNIC).</p>
-          <p class="description desc-developer">Where I have been studying the area of computing, more specifically programming, with the knowledge in the following technologies:</p>
+          <p class="description desc-developer">I have a degree in Technology in Software Development (TDS) from the University of Cuiabá (UNIC).</p>
+          <p class="description desc-developer">I have been studying the area of computing, more specifically programming, and have knowlege in the following technologies:</p>
           
           <div class="d-sm-flex justify-content-center justify-content-sm-around justify-content-md-around">
             <div class="cards-tecnologies">
