--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img src="images/all.png" class="d-flex  justify-content-center" id="image-extension">
         <div class="justify-content-center">
           <h1 class="title">The Extention</h1>
-          <p class="description desc-extension">An extention with the simple purpose of picking/getting  your channel points while you watch lives in tranquility.</p>
+          <p class="description desc-extension">An extention with the simple purpose of getting  your channel points while you watch lives in tranquility.</p>
           <p class="description desc-extension">You'll be able to check the amount of points you 've got by just taking a look at the extention work. And, if desired, you can enable a beep to notify you when you receive points.</p>
         </div>
       </div>
