Mega correction on translation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>Get Gift - Extension For Chrome</title>
-  <link rel="shortcut icon" href="/favicon.ico"/>
+  <link rel="shortcut icon" href="favicon.ico"/>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -35,7 +35,6 @@
             </li>
           </ul>
         </div>
-
       </nav>
     </div>
   </div>
@@ -45,8 +44,8 @@
       <div class="skewed"></div>
       <div class="justify-content-start">
         <h1 class="title">Get Gift - Extension for Chrome</h1>
-        <p class="description">Are you tired of clicking everytime your channel points come up while you're comfortably watching that relaxing live?</p>
-        <p class="description">Get gift is an extention for google Chrome that does just that! It detects when points are available and picks them up for you.</p>
+        <p class="description">Are you tired of clicking every time your Channel Points come up while you're watching an exciting live stream on Twitch?</p>
+        <p class="description">Get Gift is a Google Chrome extension for Twitch that just does that! It detects when points are available and picks them up for you!</p>
         <div class="d-flex">
           <a class="btn btn-purple" href="#" id="btn-banner-download">Download</br><span class="subline-button">for Chrome</span></a>
         </div>
@@ -62,9 +61,9 @@
       <div class="d-flex flex-column flex-xl-row justify-content-center">
         <img src="images/all.png" class="d-flex  justify-content-center" id="image-extension">
         <div class="justify-content-center">
-          <h1 class="title">The Extention</h1>
-          <p class="description desc-extension">An extention with the simple purpose of getting  your channel points while you watch lives in tranquility.</p>
-          <p class="description desc-extension">You'll be able to check the amount of points you 've got by just taking a look at the extention work. And, if desired, you can enable a beep to notify you when you receive points.</p>
+          <h1 class="title">The Extension</h1>
+          <p class="description desc-extension">The purpose is to auto-collect your Channel Points while you are watching any live streams on Twitch.</p>
+          <p class="description desc-extension">You can check the collected Channel Points by simply looking at the bottom of the chat tab! You can also turn on a beep to get notified whenever the points are collected.</p>
         </div>
       </div>
     </div>      
@@ -83,8 +82,8 @@
           <img src="images/eu.jpg" class="d-flex justify-content-center" id="image-developer">
         </div>
         <div class="justify-content-center">
-          <p class="description desc-developer">I have a degree in Technology in Software Development (TDS) from the University of Cuiabá (UNIC).</p>
-          <p class="description desc-developer">I have been studying the area of computing, more specifically programming, and have knowlege in the following technologies:</p>
+          <p class="description desc-developer">I have a degree in Technology in Software Development (TDS) from the University of Cuiabá (UNIC, Brazil).</p>
+          <p class="description desc-developer">I am interested in computing and IT, and I often develop Softwares using the following programming languages and technologies:</p>
           
           <div class="d-sm-flex justify-content-center justify-content-sm-around justify-content-md-around">
             <div class="cards-tecnologies">
