--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p class="description">Are you tired of clicking every time your Channel Points come up while you're watching an exciting live stream on Twitch?</p>
         <p class="description">Get Gift is a Google Chrome extension for Twitch that just does that! It detects when points are available and picks them up for you!</p>
         <div class="d-flex">
-          <a class="btn btn-purple" href="#" id="btn-banner-download">Download</br><span class="subline-button">for Chrome</span></a>
+          <a class="btn btn-purple" href="https://chrome.google.com/webstore/detail/get-gift/mapokfhmebdhgjjoedphffgphmhjbhdl?authuser=0&hl=pt-BR" id="btn-banner-download">Download</br><span class="subline-button">for Chrome</span></a>
         </div>
       </div>
       <div class="d-flex justify-content-center">
