Add download for mozilla

--- a/index.html
+++ b/index.html
@@ -43,11 +43,16 @@
     <div class="d-flex flex-column-reverse flex-md-row banner">
       <div class="skewed"></div>
       <div class="justify-content-start">
-        <h1 class="title">Get Gift - Extension for Chrome</h1>
+        <h1 class="title">Get Gift - Extension for browser</h1>
         <p class="description">Are you tired of clicking every time your Channel Points come up while you're watching an exciting live stream on Twitch?</p>
-        <p class="description">Get Gift is a Google Chrome extension for Twitch that just does that! It detects when points are available and picks them up for you!</p>
-        <div class="d-flex">
-          <a class="btn btn-purple" target="_blank" href="https://chrome.google.com/webstore/detail/get-gift/mapokfhmebdhgjjoedphffgphmhjbhdl?authuser=0&hl=pt-BR" id="btn-banner-download">Download</br><span class="subline-button">for Chrome</span></a>
+        <p class="description">Get Gift is a Google Chrome or Mozilla Firefox extension for Twitch that just does that! It detects when points are available and picks them up for you!</p>
+        <div class="d-flex justify-content-center">
+          <div class="d-flex justify-content-end space-button">
+            <a class="btn btn-purple" target="_blank" href="https://chrome.google.com/webstore/detail/get-gift/mapokfhmebdhgjjoedphffgphmhjbhdl?authuser=0&hl=pt-BR" id="btn-banner-download">Download</br><span class="subline-button">for Chrome</span></a>
+          </div>
+          <div class="d-flex justify-content-start space-button">
+            <a class="justify-content-start btn btn-purple" target="_blank" href="https://addons.mozilla.org/pt-BR/firefox/addon/get-gift/" id="btn-banner-download">Download</br><span class="subline-button">for Mozilla</span></a>
+          </div>
         </div>
       </div>
       <div class="d-flex justify-content-center">
